# autobom

./: .gitignore  Dockerfile  Dockerfile-freecad  Dockerfile-kicad  README.md  action.yaml  autobom.code-workspace  autobom.json  docker-compose-local.yaml  docker-compose.yaml  docker-compose.yaml.template  example.json  example.yml  pyproject.toml
example/: autobom.json  bom.json
example/autobom/: index.html  manifest.json
example/autobom/export/: y-gantry.step  y-gantry.stl
example/autobom/web/: main.js
example/autobom/web/o3dv/libs/: web-ifc.license.md
example/ecad/lightPixel/: fp-info-cache  fp-lib-table  lightPixel.kicad_pcb  lightPixel.kicad_prl  lightPixel.kicad_pro  lightPixel.kicad_sch
render/: Dockerfile-freecad-gha  Dockerfile-freecad-local  Dockerfile-kicad  ecad-entry.sh  ecad_renderer.py  mcad-entry.sh  mcad_renderer.py
src/autobom/: __about__.py  __init__.py
src/autobom/base/: builder.py  logger.py  site.py  supported.py
src/autobom/cad/: config.kibot.yaml  ecad.py  freecad.py  mcad.py  openscad.py
src/autobom/render/: config.kibot.yaml  ecad-entry.sh  ecad_renderer.py  mcad-entry.sh  mcad_renderer.py
src/autobom/web/: index.html  kicanvas.js  main.js  style.css
src/autobom/web/o3dv/: o3dv.license.md
tests/: __init__.py
